crates/python_parser/src/snapshots/python_parser__string__tests__string_parser_escaped_mac_eol.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..18,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..18,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..18,
                                value: "text more text",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
