crates/python_parser/src/snapshots/python_parser__string__tests__string_parser_escaped_unix_eol.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..18,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..18,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..18,
                                value: "text more text",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
